# rules_tauri

./: AGENTS.md  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yml
docs/: design.md  rules.md  testing.md
docs/superpowers/plans/: 2026-04-09-tauri-with-vite.md  2026-04-10-bazel-full-context-fixture.md  2026-04-10-bazel-js-example.md  2026-04-10-bazel-native-tauri-parity.md  2026-04-10-bazel-owned-embedded-assets.md  2026-04-10-rules-rust-codegen-fixture.md  2026-04-11-full-semantic-bazelfication.md  2026-04-11-real-example-buildrs-cutover.md  2026-04-11-remove-real-example-helper.md  2026-04-11-tauri-acl-prep-bazelification.md  2026-04-12-frontend-dist-polymorphism.md  2026-04-12-public-release-semantics.md  2026-04-12-remove-embedded-assets-override.md  2026-04-12-remove-minimal-embedded-assets-shim.md  2026-04-13-acl-name-normalization.md
docs/superpowers/specs/: 2026-04-09-tauri-with-vite-design.md  2026-04-10-bazel-js-example-design.md  2026-04-10-bazel-native-tauri-parity-design.md  2026-04-10-bazel-owned-embedded-assets-design.md  2026-04-11-full-semantic-bazelfication-design.md  2026-04-11-real-example-buildrs-cutover-design.md  2026-04-11-remove-real-example-helper-design.md  2026-04-12-frontend-dist-polymorphism-design.md  2026-04-12-public-release-semantics-design.md
examples/minimal_macos/: BUILD.bazel  MODULE.bazel  README.md  example_build.bzl
examples/minimal_macos/src/: Info.fragment.plist  tauri.conf.json
examples/minimal_macos/src-tauri/: BUILD.bazel  Cargo.toml  tauri.conf.json
examples/minimal_macos/src-tauri/src/: lib.rs  main.rs
examples/minimal_macos/src/frameworks/Fake.framework/: Fake
examples/minimal_macos/src/frontend/: index.html
examples/minimal_macos/src/icons/: AppIcon.icns
examples/minimal_macos/src/resources/: extra.conf
examples/tauri_with_vite/: BUILD.bazel  MODULE.bazel  README.md  example_build.bzl
examples/tauri_with_vite/app/: BUILD.bazel  package.json  pnpm-lock.yaml
examples/tauri_with_vite/app/src-tauri/: BUILD.bazel  Cargo.toml  build.rs  build_contract.rs  tauri.conf.json  upstream_build.rs
examples/tauri_with_vite/app/src-tauri/src/: lib.rs  main.rs
examples/tauri_with_vite/src/: tauri.conf.json
private/: BUILD.bazel  bundle_inputs.bzl  frontend_dist.bzl  macos_app.bzl  manifest.bzl  paths.bzl  plist.bzl  release_context.bzl  sidecar.bzl  target_helpers.bzl  upstream_context_oracle.bzl
tauri/: BUILD.bazel  defs.bzl  providers.bzl
test/: api_rejects_embedded_assets_override.sh  api_rejects_minimal_embedded_assets_shim.sh  compare_acl_manifests.sh  compare_acl_resolution.sh  compare_capabilities_json.sh  compare_context_build_config.sh  compare_context_common.sh  compare_context_config_normalization.sh  compare_context_oracle_utils.py  compare_context_plist_emission.sh  compare_context_runtime_shape.sh  compare_embedded_assets_compression.sh  compare_embedded_assets_order.sh  compare_embedded_assets_rust.sh  compare_embedded_assets_transform.sh  compare_fileset_release_context.sh  compare_full_codegen_context.sh  compare_runtime_authority_resolution.sh  compare_tauri_parity.sh  oracle_build_common.sh  oracle_embedded_assets_common.sh  validate_acl_name_normalization.sh  validate_bundle_destination_collisions.sh  validate_direct_context_codegen.sh  validate_examples.sh  validate_frontend_dist.sh  validate_rules_rust_codegen_fixture.sh
test/fixtures/bundle_collision/: BUILD.bazel  first.txt  second.txt
test/fixtures/embedded_assets_order/: BUILD.bazel  oracle.py
test/fixtures/embedded_assets_order/assets/: index.html
test/fixtures/embedded_assets_order/assets/assets/: app.js
test/fixtures/embedded_assets_rust/: BUILD.bazel  oracle_build.rs  oracle_compressed_build.rs
test/fixtures/embedded_assets_rust/assets/: index.html
test/fixtures/embedded_assets_rust/assets/assets/: app.js
test/fixtures/embedded_assets_transform/: BUILD.bazel  oracle_build.rs
test/fixtures/embedded_assets_transform/assets/: index.html
test/fixtures/embedded_assets_transform/assets/assets/: app.js
test/fixtures/frontend_dist/: BUILD.bazel
test/fixtures/frontend_dist/assets/: index.html
test/fixtures/frontend_dist/assets/assets/: app.js
test/fixtures/tauri_application_api/: BUILD.bazel  Cargo.toml  index.html  tauri.conf.json
test/fixtures/tauri_application_api/src/: lib.rs
test/fixtures/tauri_codegen/: BUILD.bazel  defs.bzl
test/fixtures/tauri_codegen/oracle_src-tauri/: Cargo.toml
test/fixtures/tauri_codegen/src-tauri/: BUILD.bazel  Cargo.toml  Info.plist  build.rs  build_contract.rs  tauri.conf.json  tauri.macos.conf.json  upstream_build.rs
test/fixtures/tauri_codegen/src-tauri/src/: lib.rs  main.rs
tools/: BUILD.bazel  build_tauri_example_binary.sh  build_tauri_example_frontend.sh  extensions.bzl  make_manifest.py  make_plist.py  tauri-codegen-bazel-inline-assets.patch  tauri-utils-bazel-debug-assertions.patch  tauri-utils-bazel-permission-paths.patch  tauri_assets_manifest.py  tauri_embedded_assets_rust.py  tauri_full_context_fixture.py
tools/tauri_acl_prep/: BUILD.bazel  Cargo.toml
tools/tauri_acl_prep/src/: main.rs
tools/tauri_brotli_compress/: BUILD.bazel  Cargo.toml
tools/tauri_brotli_compress/src/: main.rs  transform_main.rs
tools/tauri_context_codegen/: BUILD.bazel  Cargo.toml
tools/tauri_context_codegen/src/: main.rs
