module(
    name = "rules_tauri",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_nodejs", version = "6.5.0")
bazel_dep(name = "platforms", version = "1.0.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "24.13.0")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")
pnpm.pnpm(pnpm_version = "10.29.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//examples/tauri_with_vite/app:.npmrc",
    pnpm_lock = "//examples/tauri_with_vite/app:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.1"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "codegen_crates",
    cargo_lockfile = "//test/fixtures/tauri_codegen/src-tauri:Cargo.lock",
    manifests = ["//test/fixtures/tauri_codegen/src-tauri:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "example_crates",
    cargo_lockfile = "//examples/tauri_with_vite/app/src-tauri:Cargo.lock",
    manifests = ["//examples/tauri_with_vite/app/src-tauri:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "tool_crates",
    cargo_lockfile = "//tools/tauri_brotli_compress:Cargo.lock",
    manifests = ["//tools/tauri_brotli_compress:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.from_cargo(
    name = "acl_tool_crates",
    cargo_lockfile = "//tools/tauri_acl_prep:Cargo.lock",
    manifests = ["//tools/tauri_acl_prep:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
    ],
)
crate.annotation(
    crate = "tauri-codegen",
    patch_args = ["-p1"],
    patches = [
        "//tools:tauri-codegen-bazel-inline-assets.patch",
    ],
    repositories = ["codegen_crates"],
)
crate.annotation(
    crate = "tauri-codegen",
    patch_args = ["-p1"],
    patches = [
        "//tools:tauri-codegen-bazel-inline-assets.patch",
    ],
    repositories = ["example_crates"],
)
crate.annotation(
    crate = "tauri-utils",
    patch_args = ["-p1"],
    patches = [
        "//tools:tauri-utils-bazel-debug-assertions.patch",
        "//tools:tauri-utils-bazel-permission-paths.patch",
    ],
    repositories = ["codegen_crates"],
)
crate.annotation(
    crate = "tauri-utils",
    patch_args = ["-p1"],
    patches = [
        "//tools:tauri-utils-bazel-debug-assertions.patch",
        "//tools:tauri-utils-bazel-permission-paths.patch",
    ],
    repositories = ["example_crates"],
)
crate.annotation(
    crate = "tauri-utils",
    patch_args = ["-p1"],
    patches = [
        "//tools:tauri-utils-bazel-debug-assertions.patch",
        "//tools:tauri-utils-bazel-permission-paths.patch",
    ],
    repositories = ["acl_tool_crates"],
)
use_repo(
    crate,
    "acl_tool_crates",
    "codegen_crates",
    "codegen_crates__tauri-2.10.3",
    "example_crates",
    "tool_crates",
)
