package(default_visibility = ["//visibility:public"])

load("//tauri:defs.bzl", "tauri_app", "tauri_sidecar")

filegroup(
    name = "frontend_dist",
    srcs = glob(["src/frontend/**"]),
)

tauri_sidecar(
    name = "helper_sidecar_arm64",
    binary = "src/bin/helper-sidecar-aarch64-apple-darwin",
    sidecar_name = "helper-sidecar",
    target_triple = "aarch64-apple-darwin",
)

tauri_app(
    name = "app_arm64",
    bundle_inputs_name = "bundle_inputs_arm64",
    frontend_dist = ":frontend_dist",
    main_binary = "src/bin/minimal-app",
    sidecars = [":helper_sidecar_arm64"],
    resources = ["src/resources/example.txt"],
    resource_map = {
        "src/resources/license.txt": "legal/license.txt",
    },
    icons = ["src/icons/AppIcon.icns"],
    tauri_config = "src/tauri.conf.json",
    info_plist_fragments = ["src/Info.fragment.plist"],
    macos_files = {
        "src/resources/extra.conf": "Helpers/extra.conf",
    },
    bundle_id = "dev.rules_tauri.minimal",
    product_name = "MinimalTauriApp",
    version = "1.2.3",
    target_triple = "aarch64-apple-darwin",
    frameworks = ["src/frameworks/Fake.framework/Fake"],
)

tauri_sidecar(
    name = "helper_sidecar_x86_64",
    binary = "src/bin/helper-sidecar-x86_64-apple-darwin",
    sidecar_name = "helper-sidecar",
    target_triple = "x86_64-apple-darwin",
)

tauri_app(
    name = "app_x86_64",
    bundle_inputs_name = "bundle_inputs_x86_64",
    frontend_dist = ":frontend_dist",
    main_binary = "src/bin/minimal-app",
    sidecars = [":helper_sidecar_x86_64"],
    resources = ["src/resources/example.txt"],
    resource_map = {
        "src/resources/license.txt": "legal/license.txt",
    },
    icons = ["src/icons/AppIcon.icns"],
    tauri_config = "src/tauri.conf.json",
    info_plist_fragments = ["src/Info.fragment.plist"],
    macos_files = {
        "src/resources/extra.conf": "Helpers/extra.conf",
    },
    bundle_id = "dev.rules_tauri.minimal",
    product_name = "MinimalTauriApp",
    version = "1.2.3",
    target_triple = "x86_64-apple-darwin",
    frameworks = ["src/frameworks/Fake.framework/Fake"],
)

alias(
    name = "bundle_inputs",
    actual = ":bundle_inputs_arm64",
)

alias(
    name = "app",
    actual = ":app_arm64",
)
