package(default_visibility = ["//visibility:public"])

load("//tauri:defs.bzl", "tauri_sidecar")

exports_files([
    "src/Info.fragment.plist",
    "src/frameworks/Fake.framework/Fake",
    "src/icons/AppIcon.icns",
    "src/resources/example.txt",
    "src/resources/extra.conf",
    "src/resources/license.txt",
])

filegroup(
    name = "frontend_dist",
    srcs = glob(["src/frontend/**"]),
)

tauri_sidecar(
    name = "helper_sidecar_arm64",
    binary = "src/bin/helper-sidecar-aarch64-apple-darwin",
    sidecar_name = "helper-sidecar",
    target_triple = "aarch64-apple-darwin",
)

tauri_sidecar(
    name = "helper_sidecar_x86_64",
    binary = "src/bin/helper-sidecar-x86_64-apple-darwin",
    sidecar_name = "helper-sidecar",
    target_triple = "x86_64-apple-darwin",
)

alias(
    name = "bundle_inputs",
    actual = "//examples/minimal_macos/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "app",
    actual = "//examples/minimal_macos/src-tauri:app_arm64",
)

alias(
    name = "bundle_inputs_arm64",
    actual = "//examples/minimal_macos/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "bundle_inputs_x86_64",
    actual = "//examples/minimal_macos/src-tauri:app_x86_64_bundle_inputs",
)

alias(
    name = "app_arm64",
    actual = "//examples/minimal_macos/src-tauri:app_arm64",
)

alias(
    name = "app_x86_64",
    actual = "//examples/minimal_macos/src-tauri:app_x86_64",
)
