package(default_visibility = ["//visibility:public"])

load(":example_build.bzl", "exec_target")

exec_target(
    name = "frontend_dist",
    target = "//examples/tauri_with_vite/app:dist",
)

genrule(
    name = "embedded_assets_rust",
    srcs = [":frontend_dist"],
    tools = [
        "//tools/tauri_brotli_compress:tauri_brotli_compress_exec",
        "//tools/tauri_brotli_compress:tauri_transform_assets_exec",
        "//tools:tauri_embedded_assets_rust_exec",
    ],
    outs = ["embedded_assets_rust.rs"],
    cmd = "$(execpath //tools:tauri_embedded_assets_rust_exec) --transformer $(execpath //tools/tauri_brotli_compress:tauri_transform_assets_exec) --compressor $(execpath //tools/tauri_brotli_compress:tauri_brotli_compress_exec) --compression-quality 2 $(location :frontend_dist) $@",
)

alias(
    name = "bundle_inputs",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "app",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64",
)

alias(
    name = "app_arm64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64",
)

alias(
    name = "app_x86_64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_x86_64",
)

alias(
    name = "bundle_inputs_arm64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "bundle_inputs_x86_64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_x86_64_bundle_inputs",
)
