package(default_visibility = ["//visibility:public"])

load(":example_build.bzl", "exec_target")

exec_target(
    name = "frontend_dist",
    target = "//examples/tauri_with_vite/app:dist",
)

alias(
    name = "bundle_inputs",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "app",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64",
)

alias(
    name = "app_arm64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64",
)

alias(
    name = "app_x86_64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_x86_64",
)

alias(
    name = "bundle_inputs_arm64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_arm64_bundle_inputs",
)

alias(
    name = "bundle_inputs_x86_64",
    actual = "//examples/tauri_with_vite/app/src-tauri:app_x86_64_bundle_inputs",
)
