package(default_visibility = ["//visibility:public"])

load("@acl_tool_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_binary(
    name = "tauri_acl_prep_exec",
    srcs = ["src/main.rs"],
    crate_name = "tauri_acl_prep",
    edition = "2021",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "tauri_acl_prep_test",
    srcs = ["src/main.rs"],
    crate_name = "tauri_acl_prep_test",
    edition = "2021",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
)
