package(default_visibility = ["//visibility:public"])

load("@context_tool_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_binary(
    name = "tauri_context_codegen_exec",
    srcs = ["src/main.rs"],
    crate_name = "tauri_context_codegen",
    edition = "2021",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
)
