[package]
name = "tauri-context-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
proc-macro2 = "1"
plist = "1"
quote = "1"
png = "0.17"
semver = "1"
syn = { version = "2", features = ["full", "parsing"] }
serde_json = "1"
tauri-utils = { version = "2", features = ["build"] }
