package(default_visibility = ["//visibility:public"])

load("@minimal_example_crates//:defs.bzl", "aliases", "all_crate_deps")
load("//tauri:defs.bzl", "tauri_application")

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "context_cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
    ]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
    ],
)

tauri_application(
    name = "app_arm64",
    platform = ":macos_arm64",
    target_triple = "aarch64-apple-darwin",
    cargo_srcs = ":cargo_srcs",
    context_cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/minimal_macos:frontend_dist",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    lib_crate_name = "minimal_macos_lib",
    binary_crate_name = "minimal_macos",
    crate_features = ["custom-protocol"],
    acl_dep_env_targets = [
        "@minimal_example_crates__tauri-2.10.3//:build_script_build",
    ],
    tauri_config = "tauri.conf.json",
    main_binary_name = "minimal-app",
    icons = [":icons/icon.icns"],
    capabilities = [":capabilities/default.json"],
    sidecars = [
        "//examples/minimal_macos:helper_sidecar_arm64",
    ],
    resources = ["//examples/minimal_macos:src/resources/example.txt"],
    resource_map = {
        "//examples/minimal_macos:src/resources/license.txt": "legal/license.txt",
    },
    info_plist_fragments = ["//examples/minimal_macos:src/Info.fragment.plist"],
    macos_files = {
        "//examples/minimal_macos:src/resources/extra.conf": "Helpers/extra.conf",
    },
    bundle_id = "dev.rules_tauri.minimal",
    product_name = "MinimalTauriApp",
    version = "1.2.3",
    frameworks = ["//examples/minimal_macos:src/frameworks/Fake.framework/Fake"],
)

tauri_application(
    name = "app_x86_64",
    platform = ":macos_x86_64",
    target_triple = "x86_64-apple-darwin",
    cargo_srcs = ":cargo_srcs",
    context_cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/minimal_macos:frontend_dist",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    lib_crate_name = "minimal_macos_lib",
    binary_crate_name = "minimal_macos",
    crate_features = ["custom-protocol"],
    acl_dep_env_targets = [
        "@minimal_example_crates__tauri-2.10.3//:build_script_build",
    ],
    tauri_config = "tauri.conf.json",
    main_binary_name = "minimal-app",
    icons = [":icons/icon.icns"],
    capabilities = [":capabilities/default.json"],
    sidecars = [
        "//examples/minimal_macos:helper_sidecar_x86_64",
    ],
    resources = ["//examples/minimal_macos:src/resources/example.txt"],
    resource_map = {
        "//examples/minimal_macos:src/resources/license.txt": "legal/license.txt",
    },
    info_plist_fragments = ["//examples/minimal_macos:src/Info.fragment.plist"],
    macos_files = {
        "//examples/minimal_macos:src/resources/extra.conf": "Helpers/extra.conf",
    },
    bundle_id = "dev.rules_tauri.minimal",
    product_name = "MinimalTauriApp",
    version = "1.2.3",
    frameworks = ["//examples/minimal_macos:src/frameworks/Fake.framework/Fake"],
)

alias(
    name = "minimal_macos_lib",
    actual = ":app_arm64_lib",
)

alias(
    name = "minimal_macos_bin",
    actual = ":app_arm64_bin",
)
