package(default_visibility = ["//visibility:public"])

load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//examples/tauri_with_vite/app:vite/package_json.bzl", vite_bin = "bin")

npm_link_all_packages(
    name = "node_modules",
)

vite_bin.vite_binary(
    name = "vite",
)

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "dist/**",
            "node_modules/**",
            "src-tauri/target/**",
        ],
    ),
)

js_run_binary(
    name = "dist",
    tool = ":vite",
    args = ["build"],
    srcs = [
        ":srcs",
        ":node_modules",
    ],
    chdir = package_name(),
    out_dirs = ["dist"],
    mnemonic = "BuildTauriExampleFrontendDist",
    progress_message = "Building Tauri example frontend dist %{label}",
)
