package(default_visibility = ["//visibility:public"])

load("//tauri:defs.bzl", "tauri_bundle_inputs")

filegroup(
    name = "main_binary_src",
    srcs = ["main_binary"],
)

filegroup(
    name = "first_payload_src",
    srcs = ["first.txt"],
)

filegroup(
    name = "second_payload_src",
    srcs = ["second.txt"],
)

tauri_bundle_inputs(
    name = "bundle_inputs",
    main_binary = ":main_binary_src",
    bundle_id = "dev.rules_tauri.collision",
    product_name = "collision",
    version = "0.1.0",
    target_triple = "aarch64-apple-darwin",
    macos_files = {
        ":first_payload_src": "Helpers/duplicate.txt",
        ":second_payload_src": "Helpers/duplicate.txt",
    },
)
