package(default_visibility = ["//visibility:public"])

load(":defs.bzl", "copy_tree")

filegroup(
    name = "dist_srcs",
    srcs = glob(["dist/**"]),
)

copy_tree(
    name = "dist",
    srcs = [":dist_srcs"],
    strip_prefix = "dist/",
)

genrule(
    name = "embedded_assets_rust",
    srcs = [":dist"],
    tools = ["//tools:tauri_embedded_assets_rust_exec"],
    outs = ["embedded_assets_rust.rs"],
    cmd = "$(execpath //tools:tauri_embedded_assets_rust_exec) $(location :dist) $@",
)

genrule(
    name = "embedded_assets_compressed_rust",
    srcs = [":dist"],
    tools = [
        "//tools/tauri_brotli_compress:tauri_brotli_compress_exec",
        "//tools/tauri_brotli_compress:tauri_transform_assets_exec",
        "//tools:tauri_embedded_assets_rust_exec",
    ],
    outs = ["embedded_assets_compressed_rust.rs"],
    cmd = "$(execpath //tools:tauri_embedded_assets_rust_exec) --transformer $(execpath //tools/tauri_brotli_compress:tauri_transform_assets_exec) --compressor $(execpath //tools/tauri_brotli_compress:tauri_brotli_compress_exec) --compression-quality 2 $(location :dist) $@",
)

filegroup(
    name = "fixture_srcs",
    srcs = glob(["dist/**"]) + ["//test/fixtures/tauri_codegen/src-tauri:cargo_srcs"],
)

alias(
    name = "codegen_probe",
    actual = "//test/fixtures/tauri_codegen/src-tauri:codegen_probe",
)
