package(default_visibility = ["//visibility:public"])

load("@example_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//tauri:defs.bzl", "tauri_release_context", "tauri_release_rust_library_src")

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
        "build.rs",
        "build_contract.rs",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "context_cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
        "//examples/tauri_with_vite:frontend_dist",
    ],
)

tauri_release_context(
    name = "release_context",
    cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/tauri_with_vite:frontend_dist",
    embedded_assets_rust = "//examples/tauri_with_vite:embedded_assets_rust",
    acl_dep_env_targets = [
        "@example_crates__tauri-2.10.3//:build_script_build",
        "@example_crates__tauri-plugin-opener-2.5.3//:build_script_build",
    ],
)

tauri_release_rust_library_src(
    name = "tauri_with_vite_release_lib",
    src = "src/lib.rs",
    release_context_support = ":release_context_support",
)

cargo_build_script(
    name = "build_script",
    srcs = [
        "build.rs",
        "build_contract.rs",
    ],
    crate_root = "build.rs",
    crate_name = "build_script_build",
    edition = "2021",
    pkg_name = "tauri-with-vite",
    version = "0.1.0",
    rundir = "examples/tauri_with_vite/app/src-tauri",
    aliases = aliases(build = True),
    deps = all_crate_deps(build = True),
    link_deps = [
        "@example_crates//:tauri",
        "@example_crates//:tauri-plugin-opener",
    ],
    proc_macro_deps = all_crate_deps(build_proc_macro = True),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":release_context",
        ":_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":release_context",
        ":_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "RULES_TAURI_BAZEL_ACL_OUT_DIR": "$(location :_release_context_acl_prep)",
        "RULES_TAURI_BAZEL_FULL_CONTEXT": "$(location :release_context)",
    },
)

rust_library(
    name = "tauri_with_vite_lib",
    srcs = [":tauri_with_vite_release_lib"],
    crate_root = "tauri_with_vite_release_lib.rs",
    crate_name = "tauri_with_vite_lib",
    edition = "2021",
    aliases = aliases(),
    crate_features = ["custom-protocol"],
    compile_data = [
        ":release_context_support",
    ],
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_binary(
    name = "tauri_with_vite_bin",
    srcs = ["src/main.rs"],
    crate_name = "tauri_with_vite",
    edition = "2021",
    crate_features = ["custom-protocol"],
    deps = [":tauri_with_vite_lib"],
)

rust_test(
    name = "build_contract_test",
    srcs = ["build_contract.rs"],
    crate_name = "tauri_with_vite_build_contract_test",
    edition = "2021",
)
