package(default_visibility = ["//visibility:public"])

load("@example_crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_test")
load("//tauri:defs.bzl", "tauri_rust_app")

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
        "build.rs",
        "build_contract.rs",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "context_cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "tauri.conf.json",
        ":capabilities",
        ":icons",
        "//examples/tauri_with_vite:frontend_dist",
    ],
)

tauri_rust_app(
    name = "tauri_with_vite_lib",
    binary_name = "tauri_with_vite_bin",
    cargo_srcs = ":cargo_srcs",
    context_cargo_srcs = ":context_cargo_srcs",
    tauri_build_data = ":tauri_build_data",
    frontend_dist = "//examples/tauri_with_vite:frontend_dist",
    embedded_assets_rust = "//examples/tauri_with_vite:embedded_assets_rust",
    aliases = aliases(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    crate_features = ["custom-protocol"],
    acl_dep_env_targets = [
        "@example_crates__tauri-2.10.3//:build_script_build",
        "@example_crates__tauri-plugin-opener-2.5.3//:build_script_build",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = [
        "build.rs",
        "build_contract.rs",
    ],
    crate_root = "build.rs",
    crate_name = "build_script_build",
    edition = "2021",
    pkg_name = "tauri-with-vite",
    version = "0.1.0",
    rundir = "examples/tauri_with_vite/app/src-tauri",
    aliases = aliases(build = True),
    deps = all_crate_deps(build = True),
    link_deps = [
        "@example_crates//:tauri",
        "@example_crates//:tauri-plugin-opener",
    ],
    proc_macro_deps = all_crate_deps(build_proc_macro = True),
    data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":tauri_with_vite_lib_release_context",
        ":_tauri_with_vite_lib_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    compile_data = [
        ":cargo_srcs",
        ":tauri_build_data",
        ":tauri_with_vite_lib_release_context",
        ":_tauri_with_vite_lib_release_context_acl_prep",
        "//examples/tauri_with_vite:frontend_dist",
        "//examples/tauri_with_vite:embedded_assets_rust",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "RULES_TAURI_BAZEL_ACL_OUT_DIR": "$(location :_tauri_with_vite_lib_release_context_acl_prep)",
        "RULES_TAURI_BAZEL_FULL_CONTEXT": "$(location :tauri_with_vite_lib_release_context)",
    },
)

rust_test(
    name = "build_contract_test",
    srcs = ["build_contract.rs"],
    crate_name = "tauri_with_vite_build_contract_test",
    edition = "2021",
)
